--- a/WebsiteBanHang/Web.config
+++ b/WebsiteBanHang/Web.config
@@ -14,12 +14,11 @@
         <requestLimits maxAllowedContentLength="1073741824" />
       </requestFiltering>
     </security>
-
-	  <httpProtocol>
-		  <customHeaders>
-			  <add name="X-Frame-Options" value="DENY"/>
-		  </customHeaders>
-	  </httpProtocol>
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="DENY" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -28,11 +27,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-	  <authentication mode="Forms">
-		  <forms loginUrl="~/Home/LoiPhanQuyen" timeout="400"></forms>
-	  </authentication>
-	  
-	<sessionState timeout="15"></sessionState>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Home/LoiPhanQuyen" timeout="400">
+      </forms>
+    </authentication>
+    <sessionState timeout="15">
+    </sessionState>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
@@ -68,12 +68,6 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
-  </system.codedom>
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
@@ -87,4 +81,10 @@
   <connectionStrings>
     <add name="QuanLyBanHangEntities" connectionString="metadata=res://*/Models.QuanLyBanHangModel.csdl|res://*/Models.QuanLyBanHangModel.ssdl|    res://*/Models.QuanLyBanHangModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;    data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\QuanLyBanHang.mdf;integrated security=True;    connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <system.codedom>
+    <compilers>
+      <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:7.3 /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </compilers>
+  </system.codedom>
 </configuration>
